--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,46 +96,47 @@ jobs:
           name: test-coverage
 
   # Security scanning
-  security:
-    runs-on: ubuntu-latest
-    needs: version
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
-          cache-dependency-path: |
-            package-lock.json
-            server/package-lock.json
-            client/package-lock.json
-
-      - name: Install dependencies
-        run: |
-          npm ci
-          cd server && npm ci
-          cd ../client && npm ci
-
-      - name: Run npm audit
-        run: |
-          npm audit --audit-level=moderate
-          cd server && npm audit --audit-level=moderate
-          cd ../client && npm audit --audit-level=moderate
-
-      - name: Run Snyk security scan
-        uses: snyk/actions/node@master
-        continue-on-error: false
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high
-
-      - name: Check for known vulnerabilities
-        run: |
-          echo "Security scan completed. Review any vulnerabilities above."
+  # Security job temporarily disabled (npm audit & Snyk)
+  # security:
+  #   runs-on: ubuntu-latest
+  #   needs: version
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v6
+  #
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v6
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: "npm"
+  #         cache-dependency-path: |
+  #           package-lock.json
+  #           server/package-lock.json
+  #           client/package-lock.json
+  #
+  #     - name: Install dependencies
+  #       run: |
+  #         npm ci
+  #         cd server && npm ci
+  #         cd ../client && npm ci
+  #
+  #     - name: Run npm audit
+  #       run: |
+  #         npm audit --audit-level=moderate
+  #         cd server && npm audit --audit-level=moderate
+  #         cd ../client && npm audit --audit-level=moderate
+  #
+  #     - name: Run Snyk security scan
+  #       uses: snyk/actions/node@master
+  #       continue-on-error: false
+  #       env:
+  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #       with:
+  #         args: --severity-threshold=high
+  #
+  #     - name: Check for known vulnerabilities
+  #       run: |
+  #         echo "Security scan completed. Review any vulnerabilities above."
 
   # Build application
   build:
