--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,22 +4,27 @@
   "description": "A modern Docker container maintenance tool with Portainer integration",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#005a9c",
+  "background_color": "#050d1f",
+  "theme_color": "#091733",
   "orientation": "portrait-primary",
   "scope": "/",
   "icons": [
     {
-      "src": "/img/logo.png",
+      "src": "/img/logo-maskable.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/img/logo-maskable.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
       "src": "/img/logo.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
   "categories": ["productivity", "developer", "utilities"],
