--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -33,17 +33,17 @@ jobs:
           cd ../client && npm ci
 
       - name: Run npm audit (root)
-        run: npm audit --audit-level=moderate
+        run: npx better-npm-audit audit --level moderate
 
       - name: Run npm audit (server)
         run: |
           cd server
-          npm audit --audit-level=moderate
+          npx better-npm-audit audit --level moderate
 
       - name: Run npm audit (client)
         run: |
           cd client
-          npm audit --audit-level=moderate
+          npx better-npm-audit audit --level moderate
 
   # Snyk security scan
   snyk-scan:
@@ -75,7 +75,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=high --all-projects
+          args: --severity-threshold=high --all-projects --policy-path=.
 
       - name: Upload Snyk results to GitHub Security Tab
         uses: github/codeql-action/upload-sarif@v4
