--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "better-npm-audit": "^3.11.0",
     "concurrently": "^9.2.1",
     "eslint": "^10.0.0",
     "prettier": "^3.8.1",
