--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "axios": "^1.13.5",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "^0.564.0",
     "prop-types": "^15.8.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
     "react-select": "^5.10.2",
     "recharts": "^3.7.0"
@@ -20,19 +20,25 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/coverage-v8": "^4.0.18",
     "baseline-browser-mapping": "^2.9.19",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^7.0.0",
-    "globals": "^15.14.0",
+    "globals": "^17.3.0",
+    "jsdom": "^28.1.0",
     "vite": "^6.3.5",
+    "vitest": "^4.0.18",
     "yaml": "^2.8.2"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "browserslist": {
     "production": [
