--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "better-npm-audit": "^3.11.0",
     "concurrently": "^9.2.1",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.0",
     "prettier": "^3.8.1",
-    "semver": "^7.6.0"
+    "semver": "^7.7.4"
   },
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
