--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
@@ -40,6 +40,6 @@
   "overrides": {
     "js-yaml": "^4.1.1",
     "lodash": "^4.17.23",
-    "tar": "^7.5.7"
+    "tar": ">=7.5.8"
   }
 }
