--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.13.5",
+    "cronstrue": "^3.12.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.564.0",
     "prop-types": "^15.8.1",
