--- a/server/.nsprc
+++ b/server/.nsprc
@@ -1,7 +1,7 @@
 {
-  "1113214": {
+  "1113398": {
     "active": true,
-    "notes": "ajv <8.18.0 ReDoS via $data option. eslint hard-pins ajv@^6 — API-incompatible with ajv 8. Trusted input only.",
+    "notes": "ajv <8.18.0 ReDoS via $data option (GHSA-2g4f-4pwh-qvx6). eslint hard-pins ajv@^6 — API-incompatible with ajv 8. eslint uses ajv only for config schema validation with trusted input. Re-evaluate when eslint migrates to ajv 8.",
     "expiry": "2026-08-20"
   },
   "1113371": {
