feat: oauth with authentik

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,14 @@ PORTAINER_USERNAME=admin
 PORTAINER_PASSWORD="your_password_here"
 # Example with special characters:
 # PORTAINER_PASSWORD="my#password$123"
+
+# OAuth / SSO Configuration (optional)
+# Uncomment and configure to enable Single Sign-On
+# OAUTH_PROVIDER=authentik
+# OAUTH_CLIENT_ID=your-client-id
+# OAUTH_CLIENT_SECRET=your-client-secret
+# OAUTH_ISSUER_URL=https://auth.example.com/application/o/docked
+# OAUTH_SCOPES=openid,profile,email
+# OAUTH_AUTO_REGISTER=true
+# OAUTH_DEFAULT_ROLE=Administrator
+# OAUTH_ALLOW_LOCAL_LOGIN=true
