--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "nanoid": "^5.1.6",
     "sqlite3": "^5.1.7",
