--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.13.5",
     "cronstrue": "^3.12.0",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.575.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.4",
